upgrade to java JDK 11